[Client|Journal] fix menu border alignment

--- a/client/src/Components/Journal/Journal.less
+++ b/client/src/Components/Journal/Journal.less
@@ -15,7 +15,7 @@
     & .journal__menu-button-container {
       position: absolute;
       top: 8px;
-      right: -42px;
+      right: -42.5px;
       z-index: var(--layer-2);
       
       border: solid 3px black;
@@ -56,7 +56,7 @@
           padding: 0.5rem;
           
           text-align: left;
-          overflow-x: scroll;
+          overflow-x: hidden;
           
           &.last {
             border-left: 3px solid black;
@@ -80,7 +80,7 @@
           border-right: 3px solid black;
           border-left: 3px solid black;
 
-          & .last {
+          &.last {
             border-top-right-radius: 0; 
             border-top-left-radius: 0; 
           }
